--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -26,3 +25,18 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+          go-version: '1.22.x'
+    - name: GolangCI lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.56.0
+        args: --timeout 3m --config .golangci.yml
